--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
 
   plan:
     runs-on: ubuntu-latest
-    needs: [checks]
+    needs: hclfmt
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
@@ -56,7 +56,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [plan]
+    needs: plan
     if: github.ref == 'refs/heads/main'
     steps:
       - name: "Checkout"
