--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,9 @@ jobs:
 
   trivy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -85,7 +88,7 @@ jobs:
           output: trivy-results.sarif
           scan-ref: .
           scan-type: fs
-          template: '@/contrib/sarif.tpl'
+          template: "@/contrib/sarif.tpl"
           trivy-config: trivy.yaml
       - name: Upload Trivy results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
