--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,15 @@ jobs:
       - name: Run Trivy vulnerability scanner in fs mode
         uses: aquasecurity/trivy-action@master
         with:
+          exit-code: "1"
           format: template
           output: trivy-results.sarif
           scan-ref: .
           scan-type: fs
           template: "@/contrib/sarif.tpl"
           trivy-config: trivy.yaml
-      - name: Upload Trivy results to GitHub Security tab
+      - if: failure()
+        name: Upload Trivy results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: trivy-results.sarif
