feat: add outputs to secrets store

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  hclfmt:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
