--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -47,6 +47,10 @@ jobs:
           aws configure set --profile personal source_profile source
           aws configure set --profile personal region ${{ inputs.aws-region }}
           aws configure set --profile personal role_arn ${{ secrets.AWS_ROLE_ARN }}
+      - name: Check credentials
+        run: |
+          aws sts get-caller-identity --profile source
+          aws sts get-caller-identity --profile personal
       - name: Terragrunt ${{ inputs.command }}
         uses: gruntwork-io/terragrunt-action@v2
         with:
