--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       matrix:
         directory:
           - live/cloudflare
+          - live/github-dev-blog
     uses: ./.github/workflows/sync.yml
     with:
       aws-region: ap-southeast-1
@@ -54,6 +55,7 @@ jobs:
       matrix:
         directory:
           - live/cloudflare
+          - live/github-dev-blog
     if: github.ref == 'refs/heads/main'
     uses: ./.github/workflows/sync.yml
     with:
