fix: pass the required variables

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -63,3 +63,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TF_TOKEN_app_terraform_io: ${{ secrets.TERRAFORM_CLOUD_TOKEN }}
           TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          TF_VAR_gpg_key_passphrase: ${{ secrets.GPG_KEY_PASSPHRASE }}
