--- a/kubernetes/hetzner-personal/namespaces/gotk-sync.yml
+++ b/kubernetes/hetzner-personal/namespaces/gotk-sync.yml
@@ -4,11 +4,11 @@ items:
   - apiVersion: kustomize.toolkit.fluxcd.io/v1
     kind: Kustomization
     metadata:
-      name: helm-releases
+      name: namespaces
       namespace: flux-system
     spec:
       interval: 10m0s
-      path: ./kubernetes/hetzner-personal
+      path: ./kubernetes/hetzner-personal/namespaces
       prune: true
       sourceRef:
         kind: GitRepository
