--- a/kubernetes/hetzner-personal/main.yml
+++ b/kubernetes/hetzner-personal/main.yml
@@ -4,7 +4,7 @@ items:
   - apiVersion: kustomize.toolkit.fluxcd.io/v1
     kind: Kustomization
     metadata:
-      name: helm-releases
+      name: root
       namespace: flux-system
     spec:
       interval: 10m0s
