fix: create dependency to namespace

--- a/kubernetes/hetzner-personal/helm-releases/gotk-sync.yml
+++ b/kubernetes/hetzner-personal/helm-releases/gotk-sync.yml
@@ -10,6 +10,9 @@ items:
       interval: 10m0s
       path: ./kubernetes/hetzner-personal/helm-releases
       prune: true
+      dependsOn:
+        - name: namespaces
+          namespace: flux-system
       sourceRef:
         kind: GitRepository
         name: flux-system
