--- a/kubernetes/hetzner-personal/helm-releases/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kustomization.yml
@@ -6,6 +6,11 @@ configMapGenerator:
       - values.yaml=./cert-manager/values.yml
     name: cert-manager-config
     namespace: flux-system
+  - files:
+      - values.yaml=./external-secrets/values.yml
+    name: external-secrets-config
+    namespace: flux-system
 
 resources:
   - ./cert-manager/helm-release.yml
+  - ./external-secrets/helm-release.yml
