fix: specify target namespace

--- a/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
@@ -33,6 +33,7 @@ items:
         enable: true
         ignoreFailures: true
         timeout: 1m
+      targetNamespace: cert-manager
       timeout: 10m
       upgrade:
         cleanupOnFail: true
