feat: finish up with the k8s setup

--- a/ansible/monitoring/handlers/main.yml
+++ b/ansible/monitoring/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Restart node-exporter
   ansible.builtin.systemd:
-    name: node_exporter
+    name: node-exporter
     state: restarted
     daemon_reload: true
 - name: Reload vmagent service
