--- a/kubernetes/hetzner-personal/flux-system/gotk-sync.yml
+++ b/kubernetes/hetzner-personal/flux-system/gotk-sync.yml
@@ -7,7 +7,7 @@ items:
       name: flux-system
       namespace: flux-system
     spec:
-      interval: 1m0s
+      interval: 1m
       ref:
         branch: main
       url: https://github.com/meysam81/infra.git
@@ -17,7 +17,7 @@ items:
       name: flux-system
       namespace: flux-system
     spec:
-      interval: 10m0s
+      interval: 10m
       path: ./kubernetes/hetzner-personal/flux-system
       prune: true
       sourceRef:
