chore: create default NetPol to allow all traffics, for now

--- a/kubernetes/hetzner-personal/helm-releases/kustomization.yml
+++ b/kubernetes/hetzner-personal/helm-releases/kustomization.yml
@@ -12,5 +12,6 @@ configMapGenerator:
     namespace: flux-system
 
 resources:
-  - ./cert-manager/helm-release.yml
-  - ./external-secrets/helm-release.yml
+  - cert-manager/helm-release.yml
+  - external-secrets/helm-release.yml
+  - gotk-sync.yml
