--- a/kubernetes/hetzner-personal/main.yml
+++ b/kubernetes/hetzner-personal/main.yml
@@ -1,15 +1,12 @@
-apiVersion: v1
-kind: List
-items:
-  - apiVersion: kustomize.toolkit.fluxcd.io/v1
-    kind: Kustomization
-    metadata:
-      name: root
-      namespace: flux-system
-    spec:
-      interval: 10m0s
-      path: ./kubernetes/hetzner-personal
-      prune: true
-      sourceRef:
-        kind: GitRepository
-        name: flux-system
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: root
+  namespace: flux-system
+spec:
+  interval: 10m0s
+  path: ./kubernetes/hetzner-personal
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
