--- a/kubernetes/hetzner-personal/helm-releases/external-secrets/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/external-secrets/helm-release.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: List
 items:
@@ -29,11 +30,12 @@ items:
           retries: 3
       interval: 30m
       maxHistory: 10
+      releaseName: external-secrets
+      targetNamespace: external-secrets
       test:
         enable: true
         ignoreFailures: true
         timeout: 1m
-      targetNamespace: external-secrets
       timeout: 10m
       upgrade:
         cleanupOnFail: true
