fix(cert-manager): avoid skipping CRD installations

--- a/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
+++ b/kubernetes/hetzner-personal/helm-releases/cert-manager/helm-release.yml
@@ -28,6 +28,7 @@ items:
         createNamespace: true
         remediation:
           retries: 3
+        skipCRDs: false
       interval: 30m
       maxHistory: 10
       releaseName: cert-manager
