feat: create the cluster gateway

--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -1,3 +1,5 @@
 resources:
   - ./namespaces/gotk-sync.yml
   - ./helm-releases/gotk-sync.yml
+  # - ./networking/gotk-sync.yml
+  - ./gateway/gotk-sync.yml
