--- a/kubernetes/hetzner-personal/gateway/cluster-gateway.yml
+++ b/kubernetes/hetzner-personal/gateway/cluster-gateway.yml
@@ -4,6 +4,9 @@ metadata:
   name: cluster-gateway
   namespace: flux-system
 spec:
+  addresses:
+    - value: "88.99.186.204"
+    - value: "2a01:4f8:1c1c:adcf::1"
   gatewayClassName: cilium
   listeners:
     - allowedRoutes:
