--- a/kubernetes/hetzner-personal/gateway/cluster-gateway.yml
+++ b/kubernetes/hetzner-personal/gateway/cluster-gateway.yml
@@ -2,7 +2,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: cluster-gateway
-  namespace: flux-system
+  namespace: cert-manager
 spec:
   addresses:
     - value: "88.99.186.204"
