--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -3,3 +3,4 @@ resources:
   - ./helm-releases/gotk-sync.yml
   # - ./networking/gotk-sync.yml
   - ./gateway/gotk-sync.yml
+  - ./applications/gotk-sync.yml
