fix(applications): specify absolute path to file in mountPath

--- a/kubernetes/hetzner-personal/applications/nc-server.yml
+++ b/kubernetes/hetzner-personal/applications/nc-server.yml
@@ -34,7 +34,7 @@ items:
                 - containerPort: 8080
                   name: http
               volumeMounts:
-                - mountPath: /www/
+                - mountPath: /www/index.html
                   name: nc-server
                   readOnly: true
                   subPath: index.html
