chore: remove gateway and application for now

--- a/kubernetes/hetzner-personal/kustomization.yml
+++ b/kubernetes/hetzner-personal/kustomization.yml
@@ -2,5 +2,5 @@ resources:
   - ./namespaces/gotk-sync.yml
   - ./helm-releases/gotk-sync.yml
   # - ./networking/gotk-sync.yml
-  - ./gateway/gotk-sync.yml
-  - ./applications/gotk-sync.yml
+  # - ./gateway/gotk-sync.yml
+  # - ./applications/gotk-sync.yml
