fix(app): modify the nc-server command and args

--- a/kubernetes/hetzner-personal/applications/nc-server.yml
+++ b/kubernetes/hetzner-personal/applications/nc-server.yml
@@ -26,8 +26,8 @@ items:
             app: nc-server
         spec:
           containers:
-            - args: ["-l", "-p", "8080", "-e", "cat", "index.html"]
-              command: ["nc"]
+            - args: ["nc", "-l", "-p", "8080", "-e", "cat", "index.html"]
+              command: ["sh", "-c"]
               image: busybox:1
               name: nc-server
               ports:
