--- a/live/hetzner-personal/cloud-init.yml
+++ b/live/hetzner-personal/cloud-init.yml
@@ -26,7 +26,7 @@ runcmd:
   - sed -i -e '/^\(#\|\)AllowAgentForwarding/s/^.*$/AllowAgentForwarding no/' /etc/ssh/sshd_config
   - sed -i -e '/^\(#\|\)AuthorizedKeysFile/s/^.*$/AuthorizedKeysFile .ssh\/authorized_keys/' /etc/ssh/sshd_config
   - sed -i '$a AllowUsers meysam' /etc/ssh/sshd_config
-  - curl https://get.k3s.io | INSTALL_K3S_VERSION="v1.28.7+k3s1" INSTALL_K3S_EXEC="--disable traefik --disable servicelb --disable-network-policy --flannel-backend none --write-kubeconfig /home/meysam/.kube/config --secrets-encryption" sh -
+  - curl https://get.k3s.io | INSTALL_K3S_VERSION="v1.28.7+k3s1" INSTALL_K3S_EXEC="--disable traefik --disable-network-policy --flannel-backend none --write-kubeconfig /home/meysam/.kube/config --secrets-encryption" sh -
   - chown -R meysam:meysam /home/meysam/.kube/
   - kubectl completion bash | tee /etc/bash_completion.d/kubectl
   - k3s completion bash | tee /etc/bash_completion.d/k3s
