chore(app): rewrite everything to the root

--- a/kubernetes/hetzner-personal/applications/http-server.yml
+++ b/kubernetes/hetzner-personal/applications/http-server.yml
@@ -87,3 +87,9 @@ items:
         - backendRefs:
             - name: http-server
               port: 80
+          filters:
+            - type: URLRewrite
+              urlRewrite:
+                path:
+                  replaceFullPath: /
+                  type: ReplaceFullPath
