--- a/ansible/playbooks/provision-hetzner-personal.yml
+++ b/ansible/playbooks/provision-hetzner-personal.yml
@@ -1,3 +1,11 @@
+- name: Install monitoring on Ubuntu
+  hosts: all
+  gather_facts: true
+  become: true
+  vars_files:
+    - ../vars/grafana-cloud.yml
+  roles:
+    - monitoring
 - name: Bootstrap K8s on Ubuntu
   hosts: all
   gather_facts: true
