--- a/live/hetzner-personal/cloud-init.yml
+++ b/live/hetzner-personal/cloud-init.yml
@@ -14,6 +14,7 @@ packages:
 package_update: true
 package_upgrade: true
 runcmd:
+  - usermod -aG adm meysam
   - printf "[sshd]\nenabled = true\nbanaction = iptables-multiport" > /etc/fail2ban/jail.local
   - systemctl enable fail2ban
   - sed -i -e '/^\(#\|\)PermitRootLogin/s/^.*$/PermitRootLogin no/' /etc/ssh/sshd_config
@@ -26,7 +27,7 @@ runcmd:
   - sed -i -e '/^\(#\|\)AllowAgentForwarding/s/^.*$/AllowAgentForwarding no/' /etc/ssh/sshd_config
   - sed -i -e '/^\(#\|\)AuthorizedKeysFile/s/^.*$/AuthorizedKeysFile .ssh\/authorized_keys/' /etc/ssh/sshd_config
   - sed -i '$a AllowUsers meysam' /etc/ssh/sshd_config
-  - curl https://get.k3s.io | INSTALL_K3S_VERSION="v1.28.7+k3s1" INSTALL_K3S_EXEC="--disable traefik --disable-network-policy --flannel-backend none --write-kubeconfig /home/meysam/.kube/config --secrets-encryption" sh -
+  - curl https://get.k3s.io | INSTALL_K3S_VERSION="v1.29.2+k3s1" INSTALL_K3S_EXEC="--cluster-cidr=20.0.0.0/8,2001:cafe:42::/56 --service-cidr=30.0.0.0/12,2001:cafe:43::/112 --disable traefik --disable-network-policy --flannel-backend none --write-kubeconfig /home/meysam/.kube/config --secrets-encryption" sh -
   - chown -R meysam:meysam /home/meysam/.kube/
   - kubectl completion bash | tee /etc/bash_completion.d/kubectl
   - k3s completion bash | tee /etc/bash_completion.d/k3s
