--- a/ansible/hetzner/main.yml
+++ b/ansible/hetzner/main.yml
@@ -6,11 +6,13 @@
     - ./vars.yml
   roles:
     - monitoring
-# - name: Bootstrap K8s on Ubuntu
-#   hosts: hetzner
-#   gather_facts: true
-#   become: true
-#   environment:
-#     KUBECONFIG: /home/meysam/.kube/config
-#   roles:
-#     - name: k8s
+- name: Bootstrap K8s on Ubuntu
+  hosts: hetzner
+  gather_facts: true
+  become: true
+  environment:
+    KUBECONFIG: /home/meysam/.kube/config
+  tags:
+    - k8s
+  roles:
+    - name: k8s
