--- a/ansible/roles/fluxcd/tasks/main.yml
+++ b/ansible/roles/fluxcd/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Initialize vars
+  ansible.builtin.include_vars: "{{ ansible_architecture }}.yml"
+  tags:
+    - always
 - name: Install flux-system bootstrap manifests
   kubernetes.core.k8s:
     definition: "{{ lookup('kubernetes.core.kustomize', dir='https://github.com/meysam81/infra//kubernetes/hetzner-personal/flux-system?timeout=60&ref=main') }}"
