--- a/ansible/hetzner/vars.yml
+++ b/ansible/hetzner/vars.yml
@@ -9,3 +9,6 @@ loki_remote_write:
   password: "{{ prometheus_remote_write.password }}"
 
 admin_ip_address: "{{ lookup('amazon.aws.ssm_parameter', '/meysam/public-ip-address', profile='personal', region='ap-southeast-1') }}"
+
+domain_name: 7c75a749-765a-c643-21de-1257a0758748.developer-friendly.blog
+domain_email: admin@developer-friendly.blog
