chore(hetzner): fetch dynamic domain name from SSM parameter store

--- a/ansible/hetzner/vars.yml
+++ b/ansible/hetzner/vars.yml
@@ -10,5 +10,5 @@ loki_remote_write:
 
 admin_ip_address: "{{ lookup('amazon.aws.ssm_parameter', '/meysam/public-ip-address', profile='personal', region='ap-southeast-1') }}"
 
-domain_name: 7c75a749-765a-c643-21de-1257a0758748.developer-friendly.blog
+domain_name: "{{ lookup('amazon.aws.ssm_parameter', '/hetzner-personal/domain-name', profile='personal', region='ap-southeast-1') }}"
 domain_email: admin@developer-friendly.blog
