chore(mongo): fetch passwords from generator

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -4,11 +4,35 @@ metadata:
   name: mongodb-secrets
 spec:
   refreshInterval: 5m
-  target:
-    name: mongodb-secret
   dataFrom:
     - sourceRef:
         generatorRef:
           apiVersion: generators.external-secrets.io/v1alpha1
           kind: Password
           name: mongo-password
+      rewrite:
+        - regexp:
+            source: password
+            target: appPassword
+    - sourceRef:
+        generatorRef:
+          apiVersion: generators.external-secrets.io/v1alpha1
+          kind: Password
+          name: root-password
+      # rewrite:
+      #   - regexp:
+      #       source: password
+      #       target: rootPassword
+      transofrm:
+        template: |
+          rootPassword: "{{ .password | toString -}}"
+
+  target:
+    immutable: false
+    template:
+      data:
+        values.yaml: |
+          auth:
+            rootPassword: "{{ .rootPassword | toString -}}"
+            passwords:
+              - "{{ .appPassword | toString -}}"
