fix(mongo): modify typo

--- a/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
+++ b/kubernetes/hetzner-personal/helm-releases/mongodb/secrets.yml
@@ -23,7 +23,7 @@ spec:
       #   - regexp:
       #       source: password
       #       target: rootPassword
-      transofrm:
+      transform:
         template: |
           rootPassword: "{{ .password | toString -}}"
 
